--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "js-gb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "cli.js",
   "scripts": {
-    "start": "nodemon index.ts",
+    "start": "ts-node index.ts",
     "test": "jest"
   },
   "repository": {
@@ -21,7 +21,9 @@
   "dependencies": {
     "ansi": "^0.3.1",
     "colors": "^1.4.0",
-    "nodemon": "^2.0.19"
+    "inquirer": "^8.2.0",
+    "nodemon": "^2.0.19",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
@@ -29,5 +31,8 @@
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "bin": {
+    "reader": "cli.js"
   }
 }
