--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "js-gb",
   "version": "1.0.0",
   "description": "",
-  "main": "cli.js",
+  "main": "index.ts",
   "scripts": {
-    "start": "ts-node index.ts",
+    "start": "nodemon",
     "test": "jest"
   },
   "repository": {
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.4",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
