--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon",
+    "dev": "nodemon src/server.ts",
+    "start": "node dist/server.js",
     "test": "jest"
   },
   "repository": {
@@ -20,13 +21,20 @@
   "homepage": "https://github.com/AndreyOsipuk/GB-node-08.22#readme",
   "dependencies": {
     "ansi": "^0.3.1",
+    "body-parser": "^1.20.0",
     "colors": "^1.4.0",
+    "cowsay": "^1.5.0",
+    "cursor": "^0.1.5",
+    "express": "^4.18.1",
     "inquirer": "^8.2.0",
+    "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.6.4",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.7",
