--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
