--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "colors": "^1.4.0",
     "cowsay": "^1.5.0",
     "cursor": "^0.1.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "inquirer": "^8.2.0",
     "mongoose": "^6.5.2",
