--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/AndreyOsipuk/GB-node-08.22#readme",
   "dependencies": {
     "ansi": "^0.3.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "colors": "^1.4.0",
     "cowsay": "^1.5.0",
@@ -29,13 +30,16 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "inquirer": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
     "nodemon": "^2.0.19",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.6.4",
     "jest": "^28.1.3",
